# BUILD bagel file

# TODO: make libgccjit build script into bagel file
cc_library(
    name = "sds",
    srcs = ["lib/sds.c"],
    hdrs = [
        "lib/sds.h",
        "lib/sdsalloc.h",
    ],
)

cc_library(
    name = "log",
    srcs = ["lib/log.c"],
    hdrs = ["lib/log.h"],
)

cc_import(
    name = "stb_ds",
    hdrs = ["lib/stb_ds.h"],
)

cc_binary(
    name = "kapuc",
    srcs = [
        "lib/env_args.h",
        "lib/log.c",
        "lib/log.h",
        "lib/sds.c",
        "lib/sds.h",
        "lib/sdsalloc.h",
        "lib/stb_ds.h",
        "src/kapuc/helper.h",
        "src/kapuc/lex.c",
        "src/kapuc/lex.h",
        "src/kapuc/main.c",
        "src/kapuc/parse.c",
        "src/kapuc/parse.h",
    ],
    copts = [
        "-O2",
    ],
    deps = [
        "log",
        "sds",
        "stb_ds",
        "@llvm",
    ],
)

load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//:kapuc": "",
    },
)
