# BUILD bagel file

cc_library(
    name = "sds",
    srcs = ["lib/sds.c"],
    hdrs = [
        "lib/sds.h",
        "lib/sdsalloc.h",
    ],
)

cc_library(
    name = "ctl",
    srcs = glob(["lib/ctl/*.h"])
)

cc_library(
    name = "log",
    srcs = ["lib/log.c"],
    hdrs = ["lib/log.h"],
)

cc_import(
    name = "stb_ds",
    hdrs = ["lib/stb_ds.h"],
)

cc_library(
	name = "env_args",
	srcs = ["lib/env_args.cpp"],
	hdrs = ["lib/env_args.h"],
	copts = ["-std=c++2a", "-fno-rtti"],
	deps = select({
        "@bazel_tools//src/conditions:darwin_x86_64": ["@darwin-amd64//:llvm"],
        "@bazel_tools//src/conditions:linux_aarch64": ["@linux-aarch64//:llvm"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@linux-amd64//:llvm"],
        "@bazel_tools//src/conditions:linux_riscv64": ["@linux-riscv64//:llvm"],
        "@bazel_tools//src/conditions:windows_x64": ["@windows-amd64//:llvm"],
    }, no_match_error = "not supported os")
)

cc_binary(
    name = "kapuc",
    srcs = [
        "src/kapuc/helper.h",
        "src/kapuc/lex.c",
        "src/kapuc/lex.h",
        "src/kapuc/main.c",
        "src/kapuc/parse.c",
        "src/kapuc/parse.h",
    ],
    copts = [
        "-O2",
    ],
    deps = [
        "log",
        "sds",
        "stb_ds",
	"env_args",
	"ctl"
    ] + select({
        "@bazel_tools//src/conditions:darwin_x86_64": ["@darwin-amd64//:llvm"],
        "@bazel_tools//src/conditions:linux_aarch64": ["@linux-aarch64//:llvm"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@linux-amd64//:llvm"],
        "@bazel_tools//src/conditions:linux_riscv64": ["@linux-riscv64//:llvm"],
        "@bazel_tools//src/conditions:windows_x64": ["@windows-amd64//:llvm"],
    }, no_match_error = "not supported os"),
)

load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//:kapuc": "",
    },
)
